# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ['setuptools>=68.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['.']

[project]
name = 'arroba'
version = '0.8'
authors = [
    { name='Ryan Barrett', email='arroba@ryanb.org' },
]
description = "Python implementation of Bluesky PDS and AT Protocol, including repo, MST, and sync methods"
readme = 'README.md'
requires-python = '>=3.9'
keywords = ['arroba', 'AT Protocol', 'ATP', 'Bluesky']
dependencies = [
    'cachetools>=5.0',
    'carbox>=0.3',
    'cryptography',
    'dag-cbor',
    'dag-json>=0.2',
    'dnspython>=2.0.0',
    'lexrpc>=0.8',
    'multiformats>=0.3.1',
    'pillow',
    'pyjwt>=2.0.0',
    'pymediainfo',
    'simple-websocket',
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'License :: Public Domain',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Development Status :: 3 - Alpha',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.optional-dependencies]
datastore = [
    'google-cloud-ndb>=2.0',
]
flask = [
    'Flask>=2.0',
    'flask-sock',
]

[project.urls]
'Homepage' = 'https://github.com/snarfed/arroba'
'Documentation' = 'https://arroba.readthedocs.io/'
